--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+  gap: 1rem ;
+  justify-items: center;
+  background-image: linear-gradient(to left top, #0066fe, #7b88ff, #b0aeff, #dad5ff, #ffffff);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.student-container{
+  border: 2px solid black;
+  margin:10px;
+  border-radius: 5px;
+  padding:20px;
+  width: 400px;
+  background-image: linear-gradient(to right top, #00c5fe, #24b7e6, #34aacf, #3e9cb9, #458ea4);}
+.student-image{
+  height:125px;
+  width:125px;
+  object-fit: cover;
+  border-radius: 50%;
+  float:left
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.student-content{
+display: flex;
+align-items: flex-end;
+flex-direction: column;
+justify-content: space-between;
+}
+.student-form{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding:20px;
 }
 
-.App-link {
-  color: #61dafb;
+.teacher-form{
+  display: flex;
+  flex-direction: column;
+  padding:20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+.teacher-container{
+  border: 2px solid black;
+  margin:10px;
+  border-radius: 5px;
+  padding:20px;
+  width: 400px;
+  background-image: linear-gradient(to right top, #051937, #004978, #0080a0, #00b89b, #12eb6e);}
